<resources>
    <string name="app_name">范团</string>
    <string name="str_bot1">首页</string>
    <string name="str_bot2">头条</string>
    <string name="str_bot3">消息</string>
    <string name="str_bot4">我的</string>

    <string name="str_no_search_result">对不起，暂无符合搜索的内容～</string>
    <string name="str_tips_login_see_order">登录后才可以查看订单记录哟</string>
    <string name="str_no_name_comment">匿名评价</string>
    <string name="tips_no_name_comment">匿名评价不会对外公开您的头像、昵称给其他用户和商家</string>

    <string name="tips_net_error">网络异常</string>
    <string name="tips_no_net_available">网络不可用</string>
    <string name="tips_form_json_error">返回数据格式错误</string>
    <string name="tips_timeout">登录超时，请重新登录</string>

    <string name="folder_all">所有照片</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="action_done">完成</string>
    <string name="action_save">保存</string>
    <string name="photo_unit">张</string>
    <string name="tip_take_photo">拍摄照片</string>
    <string name="preview">预览</string>
    <string name="tips_login">登录即代表您已经同意</string>
    <string name="tips_login_por">范团用户协议</string>
    <string name="str_cancel">取消</string>
    <string name="str_cannot_receice_code">收不到验证码</string>
    <string name="str_more_youhuiquan">查看其他%d张优惠券</string>
    <string name="str_more_taocan">查看其他%d个团购套餐</string>
    <string name="str_more_daijinquan">查看其他%d张代金券</string>
    <string name="str_buy">购买</string>
    <string name="str_rmb">¥</string>

    <string name="auto_loadmore_loading">Loading…</string>
    <string name="auto_loadmore_load_finish">All data is loaded</string>
    <string name="auto_loadmore_load_failed">Loading failed, please click me to try again.</string>
    <string name="hint_publish_circle">此刻，我想说......</string>
    <string name="str_reselect_circle">重新选择圈子</string>
    <string name="str_where_are_you">你在哪里？</string>

    <string name="gallery_image_retry">加载失败，点击重试</string>
    <string name="save_str">保存</string>
    <string name="save_image_succ">保存成功</string>
    <string name="save_image_fail">保存失败</string>
    <string name="permission_denied">权限拒绝</string>
    <string name="str_userinfo">个人信息</string>

    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="str_title_cannot_empty">请输入标题</string>
    <string name="str_content_cannot_empty">请输入内容</string>
    <string name="text1" >此刻，我想说......</string>
    <string name="image_transition_name">image_transition</string>
    <string name="str_loading">正在加载…</string>
    <item name="tag_position" type="id" />
    <item name="tag_photo" type="id" />

</resources>
