<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:paddingTop="2dp">
    <LinearLayout
        android:id="@+id/ll_tab0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_tab0"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/bot_0_on"/>

        <TextView

            android:id="@+id/tv_tab0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/str_bot1"
            android:textColor="@color/text_blue"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tab1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_tab1"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/bot_1_off"/>

        <TextView

            android:id="@+id/tv_tab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/str_bot2"
            android:textColor="#525252"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tab2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_tab2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/bot_2_off"/>

        <TextView
            android:id="@+id/tv_tab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/str_bot3"
            android:textColor="#525252"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tab3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_tab3"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:src="@drawable/bot_3_off"/>

        <TextView
            android:id="@+id/tv_tab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/str_bot4"
            android:textColor="#525252"
            android:textSize="12sp"/>
    </LinearLayout>


</LinearLayout>


