<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/albumback" >

    <include
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        layout="@layout/cmp_customer_actionbar" />

    <GridView
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:clipToPadding="false"
        android:horizontalSpacing="@dimen/space_size"
        android:listSelector="@null"
        android:numColumns="3"
        android:paddingBottom="?android:attr/actionBarSize"
        android:verticalSpacing="@dimen/space_size" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@drawable/title_bg_top"
        android:clickable="true" >

        <Button
            android:id="@+id/category_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/text_indicator"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="@string/folder_all" />

        <TextView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/plugin_preview_left"
            android:text="@string/preview"
            android:textColor="#777777" />

        <Button
            android:id="@+id/commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/plugin_camera_title_btn_preview"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/action_done"
            android:textColor="#bc3f3c"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>